--- a/src/css/partials/_lti_embed_preview.scss
+++ b/src/css/partials/_lti_embed_preview.scss
@@ -24,7 +24,12 @@
 			margin-bottom: 2em;
 		}
 
-		.button {
+		.instance_owner {
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			list-style-type: none;
+			margin: 10px 0;
 		}
 
 		.widget_info {
