--- a/src/css/util-lti-picker.scss
+++ b/src/css/util-lti-picker.scss
@@ -20,7 +20,6 @@ header {
 	margin: 0 0 2em 0;
 	height: auto;
 	z-index: 0;
-	visibility: hidden;
 }
 
 .help-container {
@@ -90,11 +89,15 @@ header > h1 {
 }
 
 #select-widget {
-	margin-top: 50px;
+	padding: 10px;
+	margin-right: 30px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 #error-container {
-	padding: 0px 30px;
+	padding: 30px;
 }
 
 #search {
@@ -111,11 +114,7 @@ header > h1 {
 }
 
 #refresh {
-	margin-left: 0;
 	font-size: 10pt;
-	position: absolute;
-	right: 30px;
-	top: 125px;
 }
 
 #list-container {
@@ -277,7 +276,6 @@ header > h1 {
 	position: absolute;
 	bottom: 15px;
 	right: 30px;
-	display: none;
 }
 
 #success-message {
@@ -363,7 +361,7 @@ header > h1 {
 		height: 100%;
 		width: 0;
 		border-radius: 11px;
-		transition: width 0.2s ease, background 0.2s ease;
+		transition: width 0.3s ease, background 0.3s ease;
 	}
 }
 
@@ -372,8 +370,8 @@ header > h1 {
 }
 
 .qtip.lti {
-	right: 155px;
-	top: 111px;
+	right: 200px;
+	top: 110px;
 	font-size: 13px;
 	width: 195px;
 }
