--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -533,3 +533,96 @@ h1.logo {
 		}
 	}
 }
+
+.page {
+	position: relative;
+	z-index: 1;
+}
+
+section,
+header,
+nav,
+article,
+aside,
+footer {
+	display: block;
+}
+
+.cancel_button {
+	color: #555;
+	text-decoration: underline;
+	margin: 10px 15px;
+}
+
+.popup h2,
+.detail h2 {
+	color: #0a0a0a;
+	font-weight: 900;
+	font-size: 20pt;
+	font-family: 'Lato', arial, serif;
+	margin: 10px auto;
+	padding: 0;
+	// text-shadow: 0px 1px 0px #ccc;
+}
+
+.error-support span.subtitle {
+	font-size: 0.9em;
+	margin-top: 0px;
+	color: #666;
+}
+
+.form-content ul li {
+	text-align: left;
+}
+
+.qtip {
+	position: absolute;
+	background: #b944cc;
+	border: 4px solid #b944cc;
+	z-index: 101;
+	color: #fff;
+	padding: 10px;
+	border-radius: 5px;
+	width: 230px;
+	font-weight: bold;
+
+	&.top:after,
+	&.top:before {
+		bottom: 100%;
+		left: 50%;
+		border: solid transparent;
+		content: ' ';
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+	}
+
+	&.top:after {
+		border-color: rgba(185, 68, 204, 0);
+		border-bottom-color: #b944cc;
+		border-width: 20px;
+		margin-left: -20px;
+	}
+	&.top:before {
+		border-color: rgba(185, 68, 204, 0);
+		border-bottom-color: #b944cc;
+		border-width: 26px;
+		margin-left: -26px;
+	}
+
+	&.right:after {
+		left: 100%;
+		top: 50%;
+		border: solid transparent;
+		content: ' ';
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		border-color: rgba(185, 68, 204, 0);
+		border-left-color: #b944cc;
+		border-width: 28px;
+		margin-top: -28px;
+	}
+}
