Adds support label for support users on profile page

--- a/src/components/profile-page.scss
+++ b/src/components/profile-page.scss
@@ -181,6 +181,11 @@
 				background: #ef0223;
 				color: #ffc4cc;
 			}
+
+			&.support {
+				background: #0093e7;
+				color:#f3f3f3;
+			}
 		}
 
 		.activity_subheader {
