Small styling tweak to attempt display

--- a/src/components/scores.scss
+++ b/src/components/scores.scss
@@ -282,8 +282,9 @@ article {
 				box-shadow: 5px 5px 15px 1px #666;
 
 				.date {
+					margin-top: 5px;
 					color: #005391;
-					font-size: 13px;
+					font-size: 12px;
 					display: block;
 					font-weight: normal;
 				}
