WIP Implemented Simon's CSS changes

--- a/src/components/extra-attempts-dialog.scss
+++ b/src/components/extra-attempts-dialog.scss
@@ -12,7 +12,6 @@
 		position: relative;
 		text-align: left;
 		display: block;
-		font-family: Lato, arial, serif;
 		font-weight: bold;
 	}
 
@@ -75,7 +74,7 @@
 				font-size: 14px;
 				text-align: left;
 				height: 40px;
-				font-family: 'Lucida Grande', sans-serif;
+				// font-family: 'Lucida Grande', sans-serif;
 				overflow: auto;
 			}
 		}
