--- a/src/components/my-widgets-collaborate-dialog.scss
+++ b/src/components/my-widgets-collaborate-dialog.scss
@@ -14,7 +14,7 @@
 		position: relative;
 		text-align: left;
 		display: block;
-		font-family: Lato, arial, serif;
+		font-family: 'Lato', arial, serif;
 		font-weight: bold;
 	}
 
