--- a/src/components/pre-embed-common-styles.scss
+++ b/src/components/pre-embed-common-styles.scss
@@ -4,6 +4,7 @@ html,
 body {
 	height: 100%;
 	min-height: 100%;
+	font-family: 'Lato', arial, sans-serif;
 }
 
 .container {
@@ -29,7 +30,6 @@ body {
 				content: 'Previewing';
 				background: #b944cc;
 
-				font-family: 'Lato', 'Arial', sans-serif;
 				font-size: 20px;
 				font-weight: 900;
 				color: #ffffff;
@@ -142,7 +142,6 @@ body {
 				min-height: 100px;
 				padding: 11px 0;
 				padding: 0 0 5px 0;
-				font-family: 'Lato', arial, serif;
 				font-weight: 700;
 				font-size: 38px;
 				
@@ -206,7 +205,6 @@ body {
 							
 
 							font-size: 14px;
-							font-family: 'Lato';
 							font-weight: 200;
 
 							border: solid 1.5px #abadb3;
@@ -239,7 +237,6 @@ body {
 				background: #ffcfcf;
 				
 				color: red;
-				font-family: 'Lato';
 				font-weight: 600;
 				font-size: 17px;
 				text-align: center;
