--- a/src/css/widget-detail.scss
+++ b/src/css/widget-detail.scss
@@ -5,6 +5,8 @@ $color-features-active: #0357a5;
 	.page {
 		margin: 0 auto 20px;
 		max-width: 850px;
+
+		font-family: 'Lato', arial, sans-serif;
 	}
 
 	#breadcrumb-container {
@@ -96,7 +98,7 @@ $color-features-active: #0357a5;
 				margin-right: 5px;
 
 				font-weight: 700;
-				font-family: 'Lato', arial, serif;
+				
 				display: block;
 
 				&:hover {
@@ -406,7 +408,6 @@ $color-features-active: #0357a5;
 
 			button {
 				transition: 300ms;
-				font-family: 'Lato', arial, serif;
 				font-weight: 700;
 				box-shadow: 1px 2px 4px #888;
 				text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
@@ -493,7 +494,6 @@ $color-features-active: #0357a5;
 					font-size: 0.9em;
 					margin: 0px 0 6px 0;
 					padding: 10px 0 0 0;
-					font-family: Lato;
 
 					&:first-child {
 						padding: 0;
