--- a/src/components/scores.scss
+++ b/src/components/scores.scss
@@ -23,6 +23,8 @@ $preview-purple: #b944cc;
 
 	transition: all 0.5s ease;
 
+	font-family: 'Lato', arial, sans-serif;
+
 	&.loading {
 		background-color: #fff;
 
@@ -188,7 +190,7 @@ article {
 				height: 20px;
 				padding: 8px 0 12px 0;
 
-				font-family: 'Lato', 'Arial', sans-serif;
+				
 				font-size: 20px;
 				font-weight: 900;
 				color: #ffffff;
@@ -204,7 +206,6 @@ article {
 				right: 0;
 				top: -30px;
 
-				font-family: 'Lato', 'Arial', sans-serif;
 				font-size: 14px;
 				font-weight: 300;
 			}
@@ -554,7 +555,6 @@ height: 100px;
 
 h2,
 p {
-	font-family: Lato, arial, serif;
 	text-align: center;
 }
 h2 {
