--- a/src/css/widget-guide.scss
+++ b/src/css/widget-guide.scss
@@ -5,7 +5,7 @@
 	border-radius: 10px;
 	box-shadow: 1px 3px 10px #888;
 
-	font-family: 'Lato', arial, serif;
+	font-family: 'Lato', arial, sans-serif;
 }
 
 #top {
