--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -243,6 +243,9 @@
 						margin-bottom: 0;
 						background-color: #f2f2f2;
 						border-radius: 5px;
+
+						font-weight: 400;
+						font-size: 13px;
 					}
 				}
 			}
@@ -280,6 +283,9 @@
 						border-radius: 5px;
 						margin-top: 0.5em;
 						margin-bottom: 1em;
+
+						font-weight: 400;
+						font-size: 13px;
 					}
 
 					.normal {
