--- a/src/components/widget-player.scss
+++ b/src/components/widget-player.scss
@@ -1,18 +1,120 @@
 @import './include.scss';
 
-.center {
-	margin: 0 auto 38px;
-	background: white;
+html,
+body {
 	height: 100%;
-	min-height: 400px;
+	min-height: 100%;
+}
 
-	iframe {
-		width: 100%;
-		height: 100%;
-		margin: 0 auto;
-		outline: none;
+section.widget {
+	display: none;
+	position: absolute;
+	left: 20px;
+	right: 20px;
+	bottom: 20px;
+	top: 110px;
+	min-height: 400px;
+	min-width: 400px;
+
+	&.preview {
+		top: 150px;
+	}
+
+	.preview-bar {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
 		display: block;
-		border: none;
+		border-bottom: 4px #b944cc solid;
+		width: 100%;
+		height: 40px;
+		padding: 0;
+		background: none;
+		margin-top: -44px;
+		z-index: 1;
+
+		&:before {
+			content: 'Previewing';
+			background: #b944cc;
+			display: block;
+		
+			left: 0px;
+			top: -40px;
+			width: 160px;
+			height: 20px;
+			padding: 8px 0 12px 0;
+		
+			font-size: 20px;
+			font-weight: 900;
+			color: #ffffff;
+			text-align: center;
+			vertical-align: middle;
+		
+			border-radius: 5px 5px 0 0;
+		}
+
+		&:after {
+			content: 'Scores and interactions will not be recorded while previewing.';
+			position: absolute;
+			display: block;
+		
+			right: 0px;
+			top: 16px;
+		
+			font-size: 14px;
+			font-weight: 300;
+		}
+	}
+
+	.center {
+		margin: 0 auto 38px;
+		background: white;
+		height: 100%;
+		min-height: 400px;
+	
+		#container {
+			margin: 0 auto;
+			outline: 1px solid #999;
+			display: block;
+		
+			font-family: 'Lato', arial, sans-serif;
+		}
+		
+		#container.html {
+			border: 0;
+			height: 100%;
+			width: 100%;
+		}
+	}
+}
+
+.embedded {
+
+	background-image: none;
+	background: #ffffff;
+
+	section.widget {
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+
+	.center {
+		box-shadow: none;
+	}
+}
+
+.no-flash {
+
+	section.widget {
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+
+	.center {
+		box-shadow: none;
 	}
 }
 
