--- a/src/components/catalog.scss
+++ b/src/components/catalog.scss
@@ -173,7 +173,11 @@
 
 					&.selected {
 						background: #3498db;
-						color: white;
+						color: #fff;
+
+						svg {
+							fill: #fff;
+						}
 					}
 
 					svg {
@@ -401,6 +405,10 @@
 						&.selected {
 							background: #3498db;
 							color: white;
+
+							&.accessibility-status svg {
+								fill: #fff;
+							}
 						}
 
 						&.accessibility-status {
