--- a/src/components/detail.scss
+++ b/src/components/detail.scss
@@ -44,6 +44,20 @@ $color-green: #c5dd60;
 	flex-direction: column;
 	margin-bottom: 12px;
 
+	// padding-left: 10px;
+
+	// &:nth-child(1) {
+	// 	border-left: 8px solid rgba(239, 129, 82, 0.5);
+	// }
+
+	// &:nth-child(2) {
+	// 	border-left: 8px solid rgba(117, 191, 91, 0.5);
+	// }
+
+	// &:nth-child(3) {
+	// 	border-left: 8px solid rgba(93, 163, 203, 0.5);
+	// }
+
 	&:last-of-type {
 		margin-bottom: 0;
 	}
@@ -66,6 +80,7 @@ $color-green: #c5dd60;
 					.icon-spacer {
 						display: inline-block;
 						width: 35px;
+						margin-right: 10px;
 
 						svg {
 							position: relative;
@@ -75,28 +90,8 @@ $color-green: #c5dd60;
 					}
 
 					span {
-						color: #525252;
-						font-size: 14px;
-					}
-
-					.highlighted {
-						color: white;
-						background-color: $color-red;
-						font-weight: bold;
-						justify-content: center;
-						padding: 3px 6px;
-						border-radius: 5px;
-						box-shadow: 1px 2px 1px rgba(146, 146, 146, 0.8);
-
-						&.full {
-							color: #525252;
-							background-color: $color-green;
-						}
-
-						&.limited {
-							color: #525252;
-							background-color: $color-yellow;
-						}
+						color: #000;
+						font-size: 16px;
 					}
 				}
 			}
@@ -105,6 +100,7 @@ $color-green: #c5dd60;
 
 	.feature-heading {
 		font-size: 14px;
+		// font-weight: 700;
 		margin-bottom: 6px;
 
 		&.guide {
@@ -255,7 +251,7 @@ $color-green: #c5dd60;
 			border-radius: 2px;
 			background: $color-features;
 			color: #fff;
-			padding: 2px 6px;
+			padding: 4px 12px;
 			margin-right: 5px;
 
 			font-weight: 700;
@@ -450,8 +446,8 @@ a {
 		background: #eee;
 		border-radius: 4px 4px 0 0;
 		color: #333;
-		padding: 25px 20px;
-		min-height: 65px;
+		padding: 15px 15px;
+		min-height: 92px;
 
 		img {
 			height: 92px;
