Adds a footer to player in embed and play views with links to materia and player guide

--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -6,6 +6,7 @@ $color-yellow: #ffd439;
 $color-yellow-hover: #ffc904;
 $color-orange: #ffba5d;
 $color-green: #c5dd60;
+$color-purple: #b944cc;
 
 $very-light-gray: #ececec;
 $light-gray: #dadada;
