Prevents the cancel option in the save history dialog from running off when the dialog scrolls

--- a/src/components/question-history.scss
+++ b/src/components/question-history.scss
@@ -55,9 +55,11 @@ html {
 }
 
 .actions {
-	position: absolute;
-	width: 100%;
+	position: fixed;
+	width: 80px;
+	left: 50%;
 	bottom: 0px;
+	margin-left: -40px;
 	padding-bottom: 14px;
 
 	text-align: center;
