--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -119,9 +119,11 @@ header {
 
 		position: absolute;
 		top: 35px;
+		display: flex;
+		flex-direction: row;
 
 		// font-family: 'Lucida Grande', arial, serif;
-		
+
 		line-height: 0;
 
 		img {
@@ -132,18 +134,21 @@ header {
 
 		span.logout {
 			position: absolute;
-			right: 32px;
+			top: 26px;
+			right: 18px;
+			right: 50px;
+			display: flex;
+			flex-direction: row;
 		}
 
 		a {
 			position: absolute;
 			top: 36px;
 			right: 5px;
-			width: 500px;
 
 			font-size: 17px;
 			font-weight: 300;
-			
+
 			text-align: right;
 			color: #4c4c4c;
 
@@ -166,9 +171,10 @@ header {
 			}
 		}
 		.logout a {
+			position: relative;
+			top: 0px;
+			right: 0px;
 			font-size: 14px;
-			top: 26px;
-			right: 18px;
 			font-weight: 400;
 			cursor: pointer;
 		}
@@ -275,6 +281,60 @@ header {
 				height: auto;
 			}
 		}
+	}
+
+	#notices {
+		position:absolute;
+		display: flex;
+		flex-direction: column;
+		right: 40px;
+		width: 300px;
+		box-shadow: 1px 10px 10px 1px rgba(0,0,0,0.1);
+		background-color: #fff;
+		border-radius: 3px;
+		overflow: hidden;
+
+		h2
+		{
+			color: rgba(0,0,0,0.3);
+			padding: 10px;
+			font-size: 1em;
+		}
+	}
+	.notice {
+		line-height: normal;
+		padding: 10px;
+		&:hover{
+			background-color: rgba(0,0,0,0.1);
+		}
+	}
+	.notice.deleted {
+		background-color:red !important
+	}
+	#notifications_link {
+		cursor:pointer;
+		width: 50px;
+		height: 30px;
+		border: none;
+		background:url(../../../img/envelope.png) 0% 0% no-repeat;
+		background-size: 70%;
+	}
+	#notifications_link:after {
+		content: attr(data-notifications);
+		border-radius: 50%;
+		border: 1px solid #3690e6;
+		color: #3690e6;
+		display: inline-block;
+		width: 15px;
+		height: 15px;
+		background-color: #fff;
+		position: absolute;
+		left: 32px;
+		font-size: 0.9em;
+	}
+	.noticeClose
+	{
+		border: none;
 	}
 }
 
@@ -549,7 +609,7 @@ h1.logo {
 		width: 100%;
 		height: 100%;
 		background: rgba(0,0,0,0.66);
-	
+
 		.alert-dialog {
 			position: absolute;
 			top: 25%;
@@ -559,17 +619,17 @@ h1.logo {
 			text-align: center;
 			padding: 15px;
 			background: #fff;
-	
+
 			h3 {
 				margin: 5px 0;
 				font-size: 1.2em;
 			}
-	
+
 			.buttons {
 				display: block;
 				width: 100%;
 				margin-top: 5px;
-	
+
 				.action_button {
 					display: inline-block;
 					margin: 10px 0 5px 0;
