--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -115,68 +115,109 @@ header {
 		}
 	}
 
-	.user.avatar {
+	&#loginLink {
+		top: auto;
+	}
 
+	.profile-bar
+	{
 		position: absolute;
-		top: 35px;
+		top: 45px;
+		right: 30px;
 		display: flex;
 		flex-direction: row;
+		gap: 10px;
 
-		// font-family: 'Lucida Grande', arial, serif;
-
-		line-height: 0;
+		.profile-bar-options
+		{
+			display:  flex;
+			flex-direction: column;
+			align-items: end;
+		}
 
 		img {
 			width: 35px;
 			height: 35px;
 			border-radius: 2px;
-		}
 
-		span.logout {
-			position: absolute;
-			top: 26px;
-			right: 18px;
-			right: 50px;
-			display: flex;
-			flex-direction: row;
+			&:hover {
+				cursor: pointer;
+			}
 		}
 
 		a {
-			position: absolute;
-			top: 36px;
-			right: 5px;
-
-			font-size: 17px;
+			font-size: 14px;
 			font-weight: 300;
-
-			text-align: right;
 			color: #4c4c4c;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			line-height: 1.2em;
+			max-width: 150px;
 
-			span {
-				text-align: right;
-				position: absolute;
-				top: -28px;
-				right: 42px;
-				width: 500px;
-				font-size: 14px;
-			}
-			span:hover {
+			&:hover {
 				text-decoration: underline;
-			}
-
-			img {
-				position: absolute;
-				top: -35px;
-				right: 2px;
+				cursor: pointer;
 			}
 		}
-		.logout a {
-			position: relative;
-			top: 0px;
-			right: 0px;
-			font-size: 14px;
-			font-weight: 400;
-			cursor: pointer;
+	}
+
+	// Not being used but kept just in case
+	.profile-menu
+	{
+		visibility: hidden;
+		position: absolute;
+		top: 100px;
+		right: 28px;
+		text-align: right;
+		background-color: white;
+		box-shadow: 1px 10px 10px 1px rgba(0,0,0,0.1);
+		padding: 15px 15px 15px 25px;
+		border: 1px solid white;
+		border-radius: 5px;
+
+		ul {
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+
+			li {
+				display: inline;
+				max-width: 100px;
+
+				span {
+					font-size: 12px;
+				}
+
+				a {
+					font-size: 14px;
+					font-weight: 100;
+					margin: 0;
+					padding: 0;
+					color: #4c4c4c;
+					transition: all 0.2s linear;
+				}
+
+				a:hover {
+					border: none;
+					border-bottom: 2px solid #0093E7;
+					padding: 5px 0;
+					text-decoration: none;
+				}
+			}
+		}
+
+		&.show
+		{
+			visibility: visible;
+		}
+		.arrow-top {
+			border-left: 15px solid transparent;
+			border-right: 15px solid transparent;
+			border-bottom: 15px solid white;
+			position: absolute;
+			right: 5px;
+			top: -10px;
 		}
 	}
 
@@ -287,12 +328,14 @@ header {
 		position:absolute;
 		display: flex;
 		flex-direction: column;
-		right: 40px;
-		width: 300px;
+		right: 0;
+		top: 40px;
+		width: 400px;
 		box-shadow: 1px 10px 10px 1px rgba(0,0,0,0.1);
 		background-color: #fff;
 		border-radius: 3px;
-		overflow: hidden;
+		overflow: auto;
+		max-height: 500px;
 
 		h2
 		{
@@ -304,8 +347,18 @@ header {
 	.notice {
 		line-height: normal;
 		padding: 10px;
+		display: flex;
+		flex-direction: row;
+		// align-items: center;
+		gap: 10px;
+
 		&:hover{
 			background-color: rgba(0,0,0,0.1);
+		}
+
+		.senderAvatar {
+			width: 50px;
+			height: 50px;
 		}
 	}
 	.notice.deleted {
@@ -318,23 +371,47 @@ header {
 		border: none;
 		background:url(../../../img/envelope.png) 0% 0% no-repeat;
 		background-size: 70%;
+		margin-top: 5px;
 	}
-	#notifications_link:after {
+	#notifications_link.notEmpty:after {
 		content: attr(data-notifications);
 		border-radius: 50%;
-		border: 1px solid #3690e6;
-		color: #3690e6;
+		border: 1px solid red;
+		color: white;
 		display: inline-block;
 		width: 15px;
 		height: 15px;
-		background-color: #fff;
+		background-color: red;
 		position: absolute;
-		left: 32px;
+		left: 27px;
 		font-size: 0.9em;
+	}
+	.notification_action
+	{
+		margin-top: 15px;
 	}
 	.noticeClose
 	{
 		border: none;
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		padding: 2px;
+		flex-shrink: 0;
+		background: url('/img/close.png') no-repeat center;
+
+		visibility: hidden;
+		&.show {
+			visibility: visible;
+		}
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
+	.mobile-notifications
+	{
+		display: none;
 	}
 }
 
@@ -343,7 +420,7 @@ header {
 	header {
 		min-height: 49px;
 		height: auto;
-		overflow: hidden;
+		// overflow: hidden;
 		padding: 0;
 		margin-bottom: 8px;
 
@@ -375,6 +452,8 @@ header {
 					max-height: 175px;
 					margin-bottom: 25px;
 					opacity: 1;
+					width: 100%;
+					box-sizing: border-box;
 				}
 
 				div {
@@ -419,26 +498,29 @@ header {
 			}
 		}
 
-		.user.avatar {
+		.profile-bar {
+			gap: 20px;
+			right: 75px;
 			top: 25px;
-			max-width: calc(100% - 185px);
 
-			span {
+			.desktop-notifications {
 				display: none;
 			}
 
-			a {
-				top: 18px;
-				right: 54px;
+			.profile-bar-options
+			{
+				display: none;
+			}
+		}
 
-				img {
-					float: none;
-					margin: right;
-					height: 35px;
-					width: 35px;
-					border-radius: 3px;
-					top: -17px;
-				}
+		.mobile-notifications {
+			display: block;
+
+			#notifications_link {
+				margin-top: 5px;
+				position: absolute;
+				top: 25px;
+				right: 130px;
 			}
 		}
 
@@ -497,6 +579,34 @@ header {
 					}
 				}
 			}
+		}
+		.notifContainer
+		{
+			position: static;
+			right: auto;
+			top: auto;
+
+			#notices {
+				top: auto;
+				right: auto;
+				width: 100%;
+				overflow: hidden;
+				max-height: inherit;
+			}
+			.noticeClose
+			{
+				visibility: visible;
+			}
+		}
+
+		.profile-menu {
+			display: none;
+		}
+
+		#loginLink {
+			top: 7.5px;
+			position: absolute;
+			right: 0;
 		}
 	}
 }
