--- a/src/components/scores.scss
+++ b/src/components/scores.scss
@@ -238,7 +238,8 @@ article {
 				padding: 0;
 
 				#play-again span {
-					font-size: 7.5pt;
+					margin-left: 0.5em;
+					font-size: 12px;
 				}
 			}
 		}
