--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -127,6 +127,7 @@ header {
 		display: flex;
 		flex-direction: row;
 		gap: 10px;
+		font-size: 14px;
 
 		.profile-bar-options
 		{
@@ -135,12 +136,12 @@ header {
 			align-items: end;
 		}
 
-		img {
+		img:not(.noticeClose) {
 			width: 35px;
 			height: 35px;
 			border-radius: 2px;
 
-			&:hover {
+			&:hover:not(.senderAvatar) {
 				cursor: pointer;
 			}
 		}
@@ -353,7 +354,7 @@ header {
 		gap: 10px;
 
 		&:hover{
-			background-color: rgba(0,0,0,0.1);
+			background-color: rgb(250,250,250);
 		}
 
 		.senderAvatar {
@@ -393,12 +394,10 @@ header {
 	.noticeClose
 	{
 		border: none;
-		width: 25px;
-		height: 25px;
-		border-radius: 50%;
 		padding: 2px;
+		width: 20px;
+		height: 20px;
 		flex-shrink: 0;
-		background: url('/img/close.png') no-repeat center;
 
 		visibility: hidden;
 		&.show {
@@ -407,7 +406,19 @@ header {
 
 		&:hover {
 			cursor: pointer;
+			filter: invert(0.5) sepia(1) saturate(80) hue-rotate(340deg);
 		}
+	}
+	.notice_right_side
+	{
+		display: flex;
+		flex-direction: column;
+	}
+	.notif-date
+	{
+		font-size: 12px;
+		color: rgb(100, 100, 100);
+		padding-top: 5px;
 	}
 	.mobile-notifications
 	{
@@ -704,6 +715,11 @@ h1.logo {
 		&:hover {
 			background: #d5ea7f;
 		}
+	}
+
+	&.notification_action {
+		font-size: 14px;
+
 	}
 }
 
