Updated Kogneato artwork to vector formats. Updated no content section of score summary with Kogneato artwork.

--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -22,7 +22,7 @@
 
 			&.unchosen {
 				&:not(.bearded) {
-					background: #fff url('/img/kogneato_mywidgets.png') 50% 30% no-repeat;
+					background: #fff url('/img/kogneato_mywidgets.svg') 50% 30%/250px auto no-repeat;
 				}
 				min-height: 850px;
 			}
