--- a/src/components/css/beard-mode.scss
+++ b/src/components/css/beard-mode.scss
@@ -1,7 +1,13 @@
 .my_widgets section.directions.unchosen {
 	&.bearded {
-		background: #fff url('/img/kogneato_mywidgets_bearded.png') 50% 30% no-repeat;
+		background: #fff url('/img/kogneato_mywidgets_bearded.svg') 50% 30%/250px auto no-repeat;
 		min-height: 850px;
+	}
+}
+
+.my_widgets section.page div.scores #no-score-content {
+	&.bearded {
+		background: #fff url('/img/kogneato_no_scores_bearded.svg') 10% 30%/250px auto no-repeat;
 	}
 }
 
