--- a/src/components/support-page.scss
+++ b/src/components/support-page.scss
@@ -201,7 +201,7 @@
 					display: inline-block;
 					margin: 0px 5px;
 					font-size: 16px;
-					padding: 15px 15px 15px 15px;
+					padding: 10px;
 
 					&.delete {
 						color: #ffffff;
