--- a/src/components/user-admin-page.scss
+++ b/src/components/user-admin-page.scss
@@ -187,7 +187,7 @@
 				display: inline-block;
 				margin: 0px 5px;
 				font-size: 16px;
-				padding: 15px 15px 15px 15px;
+				padding: 10px;
 			}
 			button:disabled {
 				cursor: not-allowed;
